tests/rosetta/out/C/canonicalize-cidr.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:18:06Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:18:06Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
list_string split(char *s, char *sep) {
  list_string parts = list_string_create(0);
  char *cur = "";
  int i = 0;
  while (i < strlen(s)) {
    if (strlen(sep) > 0 && i + strlen(sep) <= strlen(s) &&
        slice_string(s, i, i + strlen(sep)) == sep) {
      list_string tmp1 = list_string_create(1);
      tmp1.data[0] = cur;
      list_string tmp2 = concat_list_string(parts, tmp1);
      parts = tmp2;
      cur = "";
      i = i + strlen(sep);
    } else {
      char *tmp3 = slice_string(s, i, i + 1);
      char *tmp4 = concat_string(cur, tmp3);
      cur = tmp4;
      i = i + 1;
    }
  }
  list_string tmp5 = list_string_create(1);
  tmp5.data[0] = cur;
  list_string tmp6 = concat_list_string(parts, tmp5);
  parts = tmp6;
  return parts;
}

char *join(list_string xs, char *sep) {
  char *res = "";
  int i = 0;
  while (i < xs.len) {
    if (i > 0) {
      char *tmp7 = concat_string(res, sep);
      res = tmp7;
    }
    char *tmp8 = concat_string(res, xs.data[i]);
    res = tmp8;
    i = i + 1;
  }
  return res;
}

char *repeat(char *ch, int n) {
  char *out = "";
  int i = 0;
  while (i < n) {
    char *tmp9 = concat_string(out, ch);
    out = tmp9;
    i = i + 1;
  }
  return out;
}

int parseIntStr(char *str) {
  int i = 0;
  int neg = 0;
  char *tmp10 = slice_string(str, 0, 1);
  if ((str.len > 0 && tmp10 == "-")) {
    neg = 1;
    i = 1;
  }
  int n = 0;
  map_string_int tmp11 = map_string_int_create(10);
  map_string_int_put(&tmp11, "0", 0);
  map_string_int_put(&tmp11, "1", 1);
  map_string_int_put(&tmp11, "2", 2);
  map_string_int_put(&tmp11, "3", 3);
  map_string_int_put(&tmp11, "4", 4);
  map_string_int_put(&tmp11, "5", 5);
  map_string_int_put(&tmp11, "6", 6);
  map_string_int_put(&tmp11, "7", 7);
  map_string_int_put(&tmp11, "8", 8);
  map_string_int_put(&tmp11, "9", 9);
  map_string_int digits = tmp11;
  while ((i < str.len)) {
    char *tmp12 = slice_string(str, i, i + 1);
    n = n * 10 + map_string_int_get(digits, tmp12);
    i = i + 1;
  }
  if (neg) {
    n = (-n);
  }
  return n;
}

char *toBinary(int n, int bits) {
  char *b = "";
  int val = n;
  int i = 0;
  while (i < bits) {
    char *tmp13 = _str(val % 2);
    char *tmp14 = concat_string(tmp13, b);
    b = tmp14;
    val = (int)((((double)val) / ((double)2)));
    i = i + 1;
  }
  return b;
}

int binToInt(char *bits) {
  int n = 0;
  int i = 0;
  while (i < strlen(bits)) {
    char *tmp15 = slice_string(bits, i, i + 1);
    n = n * 2 + parseIntStr(tmp15);
    i = i + 1;
  }
  return n;
}

char *padRight(char *s, int width) {
  char *out = s;
  while (strlen(out) < width) {
    char *tmp16 = concat_string(out, " ");
    out = tmp16;
  }
  return out;
}

char *canonicalize(char *cidr) {
  list_string parts = split(cidr, "/");
  char *dotted = parts.data[0];
  int size = parseIntStr(parts.data[1]);
  list_string binParts = list_string_create(0);
  for (int tmp17 = 0; tmp17 < split(dotted, ".").len; tmp17++) {
    char *p = split(dotted, ".").data[tmp17];
    list_string tmp18 = list_string_create(1);
    tmp18.data[0] = toBinary(parseIntStr(p), 8);
    list_string tmp19 = concat_list_string(binParts, tmp18);
    binParts = tmp19;
  }
  int binary = join(binParts, "");
  list_int tmp20 = slice_list_int(binary, 0, size);
  binary = tmp20 + repeat("0", 32 - size);
  list_string canonParts = list_string_create(0);
  int i = 0;
  while (i < binary.len) {
    list_int tmp21 = slice_list_int(binary, i, i + 8);
    char *tmp22 = _str(binToInt(tmp21));
    list_string tmp23 = list_string_create(1);
    tmp23.data[0] = tmp22;
    list_string tmp24 = concat_list_string(canonParts, tmp23);
    canonParts = tmp24;
    i = i + 8;
  }
  return join(canonParts, ".") + "/" + parts.data[1];
}

int _mochi_main() {
  list_string tests = list_string_create(6);
  tests.data[0] = "87.70.141.1/22";
  tests.data[1] = "36.18.154.103/12";
  tests.data[2] = "62.62.197.11/29";
  tests.data[3] = "67.137.119.181/4";
  tests.data[4] = "161.214.74.21/24";
  tests.data[5] = "184.232.176.184/18";
  for (int tmp25 = 0; tmp25 < 6; tmp25++) {
    char *t = tests.data[tmp25];
    printf("%s\n", padRight(t, 18) + " -> " + canonicalize(t));
  }
  return 0;
}
int main() { return _mochi_main(); }
